# simplelog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  build-docs.sh  format.sh
cmake/: simplelog.config.cmake  simplelog.dependencies.cmake  simplelog.install.cmake  simplelog.pc.in  simplelog.src.cmake  simplelog.tests.cmake
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/doxygen/: simplelog.dox
docs/sphinx/source/: conf.py  index.rst
include/simplelog/: logger.h
include/simplelog/private/: casecmp.h  formatter.h  log_metadata.h  logger.hpp  os.h
src/core/: async_consumer.cpp  async_consumer.h  config.cpp  config.h  config_parser.cpp  config_parser.h  formatter.cpp  iconsumer.h  logger.cpp  logger_engine.cpp  logger_engine.h  sync_consumer.cpp  sync_consumer.h
src/formatters/: default_formatter.cpp  default_formatter.h  null_formatter.cpp  null_formatter.h
src/loggers/file/: file_logger.cpp  file_logger.h
src/loggers/stdout/: stdout_logger.cpp  stdout_logger.h
tests/: config.cpp  config_parser.cpp
